// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertDimensions should correctly convert single dim definition with attributes and measure group 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with attributes and measure group with attribute sorts 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "attribute": Object {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with attributes and measure group with measure sorts with attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with attributes and measure group with measure sorts with attribute locators that contain element URIs 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with attributes and measure group with measure sorts without attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just attributes 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just attributes with attribute sorts 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "attribute": Object {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just attributes with measure sorts with attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just attributes with measure sorts with attribute locators that contain element URIs 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just attributes with measure sorts without attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just measure group 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just measure group with attribute sorts 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just measure group with measure sorts with attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just measure group with measure sorts with attribute locators that contain element URIs 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert single dim definition with just measure group with measure sorts without attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in first and measure group in second 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in first and measure group in second with attribute sorts 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "attribute": Object {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in first and measure group in second with measure sorts with attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_1": Object {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in first and measure group in second with measure sorts with attribute locators that contain element URIs 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_1": Object {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in first and measure group in second with measure sorts without attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_1": Object {
              "measureGroup": "testMeasure",
            },
          },
          "direction": "ASC",
        },
      },
    ],
  },
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in second and measure group in first 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in second and measure group in first with attribute sorts 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": Array [
      Object {
        "attribute": Object {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in second and measure group in first with measure sorts with attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_0": Object {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in second and measure group in first with measure sorts with attribute locators that contain element URIs 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_0": Object {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes in second and measure group in first with measure sorts without attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_0": Object {
              "measureGroup": "testMeasure",
            },
          },
          "direction": "ASC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in first and attributes in second 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in first and attributes in second with attribute sorts 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "attribute": Object {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in first and attributes in second with measure sorts with attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_0": Object {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in first and attributes in second with measure sorts with attribute locators that contain element URIs 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_0": Object {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in first and attributes in second with measure sorts without attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_0": Object {
              "measureGroup": "testMeasure",
            },
          },
          "direction": "ASC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in second and attributes in first 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in second and attributes in first with attribute sorts 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
    "sorting": Array [
      Object {
        "attribute": Object {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in second and attributes in first with measure sorts with attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_1": Object {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in second and attributes in first with measure sorts with attribute locators that contain element URIs 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_1": Object {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions should correctly convert two dim definition with attributes+measure group in second and attributes in first with measure sorts without attribute locators 1`] = `
Array [
  Object {
    "itemIdentifiers": Array [
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": Array [
      Object {
        "value": Object {
          "dataColumnLocators": Object {
            "dim_1": Object {
              "measureGroup": "testMeasure",
            },
          },
          "direction": "ASC",
        },
      },
    ],
  },
  Object {
    "itemIdentifiers": Array [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;
